<resources>
    <string name="app_name">My ApplicationPruebas</string>

    <!--IMCapp-->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">Error</string>

    <string name="bajoPeso">Bajo peso</string>
    <string name="descriptionBajoPeso">Estás por debajo de lo óptimo para tu peso y altura</string>

    <string name="nomalPeso">Peso normal</string>
    <string name="descriptionNormalPeso">Estás en lo óptimo para tu peso y altura</string>

    <string name="sobrepeso">Sobrepeso</string>
    <string name="descriptionSobrepeso">Estás por encima de lo óptimo para tu peso y altura</string>

    <string name="obesidad">Obesidad</string>
    <string name="descriptionObesidad">Estás Muy por encima de lo óptimo para tu peso y altura</string>
    <!--TODOapp-->
    <string name="welcome">Bienvenido, Rubén</string>
    <string name="category">Categorías:</string>
    <string name="tasks">Tareas:</string>
    <string name="addTasks">Añade la tarea</string>
    <string name="business">Negocios</string>
    <string name="Personal">Personal</string>
    <string name="Other">Otros</string>
    <string name="createTasks">Crear Tarea</string>

</resources>