<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/todo_background"
    android:padding="16dp">
    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/addTasks"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />
    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business"
            android:textColor="@color/white"
            android:checked="true"
            android:buttonTint="@color/todo_business_categorty"/>
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Personal"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_personal_categoty"/>
        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Other"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_other_categoty"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/createTasks"

        />

</LinearLayout>